--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>NewUser</title>
-<link rel="stylesheet" href="./css/popup.css">
-<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+<title>UserCounter</title>
+<link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
 TESTING
