Fixed body error

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-TESTING
+<div id="count_actual"></div>
 
 </body>
 <script type="text/javascript" src="./js/main.js"></script>
