Fixed apple home screen icon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="count_actual"></div>
-
+<link rel="apple-touch-icon" sizes="128x128" href="./img/red.png">
 </body>
 <script type="text/javascript" src="./js/main.js"></script>
 </html>
