Trying apple logo

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <meta charset="UTF-8">
 <title>UserCounter</title>
 <link rel="stylesheet" href="./css/main.css">
+<link rel="apple-touch-icon" href="./img/red.png">
 </head>
 <body>
 <div id="count_actual"></div>
-<link rel="apple-touch-icon" sizes="128x128" href="./img/red.png">
+
 </body>
 <script type="text/javascript" src="./js/main.js"></script>
 </html>
