--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 <div id="count_actual"></div>
-
+<div id="confetti_container">
+    <img src="" id="confetti" alt="confetti" >
+</div>
 </body>
 <script type="text/javascript" src="./js/main.js"></script>
 </html>
